# vendkit

./: .gitignore  COMPATIBILITY.md  CONTRIBUTING.md  GLOSSARY.md  README.md  ROADMAP.md  SECURITY.md  assets.go  azure-pipelines-release-smoke.yml  azure-pipelines.yml  go.mod  go.sum  index.html  pyproject.toml  vendkit-export.yml  vendkit-manifest.json  versions.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  platform-matrix.yml  release-smoke.yml  release.yml
cmd/vendkit/: cmds.go  fleet.go  fleet_test.go  handler.go  handler_test.go  human.go  ledger_test.go  main.go  prbody_test.go  pushhint.go  selfverify.go  surface_test.go
conformance/: core-rules.yml
docs/: architecture.md  readme-design-brief.md  testing.md
docs/design/: DR-0001-vendored-identity-copies.md  DR-0002-identity-in-declaration.md  DR-0003-two-lane-model.md  DR-0004-normalised-hashing.md  DR-0005-tag-is-the-release.md  DR-0006-pull-with-push-hints.md  DR-0007-platform-ports.md  DR-0008-declarative-migrations.md  DR-0009-content-adapters.md  DR-0010-review-gated-scope.md  DR-0011-single-cli-stdlib-gate.md  DR-0012-consumer-config-consolidation.md  DR-0013-seeded-files.md  DR-0014-handler-protocol.md  DR-0015-scm-ci-axes.md  DR-0016-engine-as-pinned-artefact.md  README.md  (+3 more)
latest/: architecture.html  index.html
site/: index.html
tests/: test_scenarios.py  test_units.py
v0.7.0/: testing.html
v1.0.0/: architecture.html  index.html  testing.html
vendkit/: __init__.py  ci.py  cli.py
(+163 files in other folders)
