[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vendkit"
version = "0.1.0"
description = "Vendor curated slices of files across repositories, with provenance, integrity gates, and governed upgrades"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
# Deliberately no install_requires: the consumer gate path is stdlib-only
# (INV-9). Publisher/sync commands lazily import PyYAML and instruct on
# absence.
dependencies = []

[project.optional-dependencies]
publisher = ["pyyaml>=6.0"]
dev = ["pyyaml>=6.0", "pytest>=7"]

[project.scripts]
vendkit = "vendkit.cli:main"

[tool.setuptools.packages.find]
include = ["vendkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
